Support dd-javac-plugin configuration